[package]
name = "pengcheng_driving"
version = "0.1.0"
authors = ["Paulswith <jevo747@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
toml = "0.5"
rand = "0.7"
log4rs = "0.8"
reqwest = "0.9"
dummy_xml = "0.1"
serde_json = "1.0"
error-chain = "0.12"
serde = { version = "1.0", features = ["derive"] }